@@ -1,18 +1,0 @@
-default livecd
-prompt 1
-timeout 950
-display livecd.msg
-F1 help.msg
-F2 advanced.msg
-
-label livecd
-    kernel vmlinuz
-    append initrd=initrd.gz devfs=mount fastboot=yes nomodules ramdisk_size=32000 root=/dev/rd/3 vga=788 automatic=method:cdrom @BOOT_KEYB@
-
-label initrd
-    kernel vmlinuz
-    append livecd=initrd initrd=initrd.gz devfs=mount fastboot=yes nomodules ramdisk_size=32000 root=/dev/rd/3 vga=788 automatic=method:cdrom @BOOT_KEYB@
-
-label memtest
-    kernel memtest
-
